# pyRTAB

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  pyproject.toml  requirement.txt
cmake/: add_stub.cmake  stubgen.py
nvblox/: realsense_dataloader.py  realsense_utils.py  run_realsense_mapper.py  visualizer.py  vslam_utils.py
src/: cv_typecaster.h  py_camera_model.cpp  py_feature2d.cpp  py_laser_scan.cpp  py_link.cpp  py_memory.cpp  py_odometry.cpp  py_rtab_ext.cpp  py_sensor_capture.cpp  py_sensor_data.cpp  py_signature.cpp  py_statistics.cpp  py_stereo_camera_model.cpp  py_transform.cpp  py_visual_word.cpp  py_vw_dictionary.cpp
src/camera/: py_camera.cpp  py_camera_images.cpp  py_camera_rgbd.cpp
src/py_rtab/: __init__.py  rtab_ext.pyi
tests/: rtabmap.py
